--- a/musica.html
+++ b/musica.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en">    
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,11 +12,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Os Gonzagas</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/gallery.min.css">
     <link rel="stylesheet" href="./css/gallery.theme.css">
+    <link rel="stylesheet" href="./css/cabecalho.css">
+    <link rel="stylesheet" href="./css/footer.css">
+    <link rel="stylesheet" href="./css/musica.css">
+    
+
+
 
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Rozha+One&display=swap" rel="stylesheet">
@@ -90,7 +96,6 @@
                                     <li class="redes-sociais"><a href="https://play.google.com/store/music/album/Os_Gonzagas_O_Candeeiro_N%C3%A3o_Se_Apagou?id=Baqkfyvxt4eujwaoyemx7kgzzui" target="_blank"><img src="./imagens/albuns/logos/googleplay-black.webp"></a></li>
                                     <li class="redes-sociais"><a href="https://music.apple.com/us/album/o-candeeiro-n%C3%A3o-se-apagou-ep/927539116" target="_blank"><img src="./imagens/albuns/logos/applemusic-black.webp"></a></li>
                                     <li class="redes-sociais"><a href="https://music.amazon.com.br/albums/B00V1C2UXG?tab=CATALOG&ref=dm_wcp_albm_link_pr_s" target="_blank"><img src="./imagens/albuns/logos/amazon-black.webp"></a></li>
-                                    
                                 </ul>
                             </div>
                     </div>
