--- a/index.html
+++ b/index.html
@@ -4,11 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Os Gonzagas</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/gallery.min.css">
     <link rel="stylesheet" href="./css/gallery.theme.css">
+    <link rel="stylesheet" href="./css/cabecalho.css">
+    <link rel="stylesheet" href="./css/footer.css">
+    <link rel="stylesheet" href="./css/inicio.css">
+    <!-- <link rel="stylesheet" href="./css/abanda.css">
+    <link rel="stylesheet" href="./css/musica.css">
+    <link rel="stylesheet" href="./css/agenda.css">
+    <link rel="stylesheet" href="./css/presskit.css">
+    <link rel="stylesheet" href="./css/contato.css"> -->
+
 
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Rozha+One&display=swap" rel="stylesheet">
@@ -43,15 +52,15 @@
                 <div id="item-3" class="control-operator"></div>
 
                 <figure class="item">
-                    <h1><img src="imagens/img-1.png" class="img-banner" alt=""></h1>
+                    <h1><img src="imagens/principal/img-1.png" class="img-banner" alt=""></h1>
                 </figure>
 
                 <figure class="item">
-                    <h1><img src="imagens/img-2.png" class="img-banner" alt=""></h1>
+                    <h1><img src="imagens/principal/img-2.png" class="img-banner" alt=""></h1>
                 </figure>
 
                 <figure class="item">
-                    <h1><img src="imagens/img-3.png" class="img-banner" alt=""></h1>
+                    <h1><img src="imagens/principal/img-3.png" class="img-banner" alt=""></h1>
                 </figure>
 
                 <div class="controls">
@@ -68,8 +77,8 @@
                 <iframe scrolling="no" frameborder="0" allowTransparency="true" src="https://www.deezer.com/plugins/player?format=classic&autoplay=false&playlist=true&width=700&height=350&color=00000&layout=&size=medium&type=tracks&id=627986012&app_id=1" width="100%" height="100"></iframe>
             </section>
 
-            <span class="titulo-footer"><h6>OUÇA E SIGA OS GONZAGAS</h6></span>
-            <div>
+            <div class="titulo-footer"><h6>OUÇA E SIGA OS GONZAGAS</h6></</div>
+            <div class="lista-footer">
                 <ul>
                     <li> <img id="comp-k5ekfkom0imageimageimage" alt="Grey Spotify Ícone" data-type="image" itemprop="image" src="./gallery/spotify-logo.webp" style="width: 42px; height: 42px; object-fit: cover;"></li>
                     <li><img id="comp-k5ekfkom1imageimageimage" alt="Grey Deezer Ícone" data-type="image" itemprop="image" src="./gallery/deezer-logo.webp" style="width: 42px; height: 42px; object-fit: cover;"></li>
